--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,6 +9,7 @@
         <ul class="list-inline text-center">
           {% if site.email %}
           <li class="list-inline-item">
+            Send me an email!
             <a href="mailto:{{ site.email | encode_email }}">
               <span class="fa-stack fa-lg">
                 <i class="fas fa-circle fa-stack-2x"></i>
@@ -39,6 +40,7 @@
           {% endif %}
           {% if site.linkedin_username %}
           <li class="list-inline-item">
+            Find me on linkedIn!
             <a href="https://www.linkedin.com/in/{{ site.linkedin_username }}">
               <span class="fa-stack fa-lg">
                 <i class="fas fa-circle fa-stack-2x"></i>
