--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -29,18 +29,18 @@ layout: default
       <div class="col-lg-10 col-md-10 mx-auto">
 
         {{ content }}
-
+        
         <hr>
 
         <div class="clearfix">
 
           {% if page.previous.url %}
           <a class="btn btn-primary float-left" href="{{ page.previous.url | prepend: site.baseurl | replace: '//', '/' }}" data-toggle="tooltip" data-placement="top" title="{{ page.previous.title }}">&larr; Previous<span class="d-none d-md-inline">
-              Post</span></a>
+              Project</span></a>
           {% endif %}
           {% if page.next.url %}
           <a class="btn btn-primary float-right" href="{{ page.next.url | prepend: site.baseurl | replace: '//', '/' }}" data-toggle="tooltip" data-placement="top" title="{{ page.next.title }}">Next<span class="d-none d-md-inline">
-              Post</span> &rarr;</a>
+              Project</span> &rarr;</a>
           {% endif %}
 
         </div>
