--- a/_layouts/physical.html
+++ b/_layouts/physical.html
@@ -30,19 +30,14 @@ layout: default
 
         {{ content }}
 
+        <br>
         <hr>
 
+        {% endfor %}
+
+        <!-- Pager -->
         <div class="clearfix">
-
-          {% if page.previous.url %}
-          <a class="btn btn-primary float-left" href="{{ page.previous.url | prepend: site.baseurl | replace: '//', '/' }}" data-toggle="tooltip" data-placement="top" title="{{ page.previous.title }}">&larr; Previous<span class="d-none d-md-inline">
-              Post</span></a>
-          {% endif %}
-          {% if page.next.url %}
-          <a class="btn btn-primary float-right" href="{{ page.next.url | prepend: site.baseurl | replace: '//', '/' }}" data-toggle="tooltip" data-placement="top" title="{{ page.next.title }}">Next<span class="d-none d-md-inline">
-              Post</span> &rarr;</a>
-          {% endif %}
-
+          <a class="btn btn-primary float-right" href="{{"/" | relative_url }}">Digital work &rarr;</a>
         </div>
 
       </div>
