--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -13,11 +13,11 @@ layout: default
       <div class="row">
         <div class="col-lg-10 col-md-10 mx-auto">
           <div class="page-heading">
-            <span class="subheading">Hi,</span>
+            
             <h1>I'm Renan</h1>
             {% if site.description %}
-            <span class="subheading">I'm a User Experience Designer who enjoys improving digital and physical products because 
-              solving problems is fun.</span>
+            <span class="subheading">I'm a User Experience Designer because 
+              solving problems (digital or physical) is fun.</span>
             {% endif %}
           </div>
         </div>
@@ -53,7 +53,7 @@ layout: default
 
         </article>
                   <br>
-                  <hr>
+                  
         
 
         {% endfor %}
