--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,7 +9,6 @@
         <ul class="list-inline text-center">
           {% if site.email %}
           <li class="list-inline-item">
-            Send me an email!
             <a href="mailto:{{ site.email | encode_email }}">
               <span class="fa-stack fa-lg">
                 <i class="fas fa-circle fa-stack-2x"></i>
@@ -18,12 +17,12 @@
             </a>
           </li>
           {% endif %}
-          {% if site.twitter_username %}
+          {% if site.instagram_username %}
           <li class="list-inline-item">
-            <a href="https://twitter.com/{{ site.twitter_username }}">
+            <a href="https://instagram.com/{{ site.instagram_username }}">
               <span class="fa-stack fa-lg">
                 <i class="fas fa-circle fa-stack-2x"></i>
-                <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
+                <i class="fab fa-instagram fa-stack-1x fa-inverse"></i>
               </span>
             </a>
           </li>
@@ -40,7 +39,6 @@
           {% endif %}
           {% if site.linkedin_username %}
           <li class="list-inline-item">
-            Find me on linkedIn!
             <a href="https://www.linkedin.com/in/{{ site.linkedin_username }}">
               <span class="fa-stack fa-lg">
                 <i class="fas fa-circle fa-stack-2x"></i>
