--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -13,11 +13,11 @@ layout: default
       <div class="row">
         <div class="col-lg-10 col-md-10 mx-auto">
           <div class="page-heading">
-            
+
             <h1>I'm Renan</h1>
             {% if site.description %}
-            <span class="subheading">I'm a User Experience Designer because 
-              solving problems (digital or physical) is fun.</span>
+            <br>
+            <span class="subheading">I am a User Experience Designer because solving problems (digital or physical) is fun.</span>
             {% endif %}
           </div>
         </div>
@@ -25,8 +25,6 @@ layout: default
     </div>
   </header>
 
-  <br>
-  
   <div class="container">
     <div class="row">
       <div class="col-lg-10 col-md-10 mx-auto">
@@ -52,16 +50,13 @@ layout: default
           </a>
 
         </article>
-                  <br>
-                  
-        
+<br>
+<hr>
 
         {% endfor %}
 
         <!-- Pager -->
-        <div class="clearfix">
-          <a class="btn btn-primary float-right" href="{{"/physical" | relative_url }}">Physical concepts &rarr;</a>
-        </div>
+
 
       </div>
     </div>
