--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -24,27 +24,29 @@ layout: default
     </div>
   </header>
 
-  <div class="container">
-    <div class="row">
+  <div class="container" style="margin:0 auto">
+
       <div class="col-lg-10 col-md-10 mx-auto">
 
         {{ content }}
-        
-        <br>
+
+<br>
+
 
         <div class="clearfix">
 
           {% if page.previous.url %}
-          <a class="btn btn-primary float-left" href="{{ page.previous.url | prepend: site.baseurl | replace: '//', '/' }}" data-toggle="tooltip" data-placement="top" title="{{ page.previous.title }}">&larr; Previous<span class="d-none d-md-inline">
-              Project</span></a>
+          <a class="btn btn-primary float-right" href="{{ page.previous.url | prepend: site.baseurl | replace: '//', '/' }}" data-toggle="tooltip" data-placement="top" title="{{ page.previous.title }}">Project<span class="d-none d-md-inline">
+              Below</span> &rarr;</a>
           {% endif %}
           {% if page.next.url %}
-          <a class="btn btn-primary float-right" href="{{ page.next.url | prepend: site.baseurl | replace: '//', '/' }}" data-toggle="tooltip" data-placement="top" title="{{ page.next.title }}">Next<span class="d-none d-md-inline">
-              Project</span> &rarr;</a>
+          <a class="btn btn-primary float-left" href="{{ page.next.url | prepend: site.baseurl | replace: '//', '/' }}" data-toggle="tooltip" data-placement="top" title="{{ page.next.title }}">&larr; Project<span class="d-none d-md-inline">
+              Above</span></a>
           {% endif %}
+
 
         </div>
 
       </div>
-    </div>
+
   </div>
